[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/gfx/backgrounds/menu_background.png" type="Texture" id=1]
[ext_resource path="res://game/wipeout.gd" type="Script" id=2]
[ext_resource path="res://assets/animations/wipeout_splash/13.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/wipeout_splash/12.png" type="Texture" id=4]
[ext_resource path="res://assets/animations/wipeout_splash/3.png" type="Texture" id=5]
[ext_resource path="res://assets/animations/wipeout_splash/2.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/wipeout_splash/5.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/wipeout_splash/1.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/wipeout_splash/7.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/wipeout_splash/8.png" type="Texture" id=10]
[ext_resource path="res://assets/animations/wipeout_splash/11.png" type="Texture" id=11]
[ext_resource path="res://assets/animations/wipeout_splash/4.png" type="Texture" id=12]
[ext_resource path="res://assets/sfx/wipeout.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/animations/wipeout_splash/14.png" type="Texture" id=14]
[ext_resource path="res://assets/animations/wipeout_splash/10.png" type="Texture" id=15]
[ext_resource path="res://assets/animations/wipeout_splash/9.png" type="Texture" id=16]
[ext_resource path="res://assets/animations/wipeout_splash/6.png" type="Texture" id=17]
[ext_resource path="res://assets/animations/wipeout_splash/15.png" type="Texture" id=18]
[ext_resource path="res://assets/gfx/logos/title.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Wipeout" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.392157, 0.607843, 1, 1 )

[node name="BG" type="TextureRect" parent="ColorBG"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
frames = SubResource( 1 )
frame = 13
speed_scale = 3.0
playing = true

[node name="MarginCT" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="Logo" type="TextureRect" parent="MarginCT"]
margin_right = 1080.0
margin_bottom = 520.0
texture = ExtResource( 19 )
expand = true
stretch_mode = 6

[node name="Timer" type="Timer" parent="."]

[node name="WipeoutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
